Removed proprietary base64 api